适配Java8语法